k3s-setup/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: glorbo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mixail.ermin33.fvds.ru:31339/glorbo-backend:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
