k3s-setup/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: glorbo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - pg_isready
                - "-U"
                - "postgres"
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
