k3s-setup/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: glorbo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: mixail.ermin33.fvds.ru:31339/glorbo-nginx:01
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: nginx-certs
              mountPath: /etc/letsencrypt
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: nginx-certs
          secret:
            secretName: nginx-certs
