k3s-setup/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: glorbo-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
