k3s-setup/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: glorbo-app
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
