k3s-setup/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: glorbo-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
