k3s-setup/grafana-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: glorbo-app
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
  ports:
    - port: 3000
      targetPort: 3000
