k3s-setup/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: glorbo-app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443
