k3s-setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glorbo-ingress
  namespace: glorbo-app
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mixail.ermin33.fvds.ru
        - grafana.mixail.ermin33.fvds.ru
      secretName: frontend-tls
  rules:
    - host: mixail.ermin33.fvds.ru
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

    - host: grafana.mixail.ermin33.fvds.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-proxy
                port:
                  number: 3000
